# synacor-challenge

./: .gitignore  LICENSE  arch-spec  synacor-challenge.cabal
app/: Main.hs
src/: Coins.hs  Interpreter.hs  OpCode.hs  ParseBin.hs  Program.hs  State.hs
src/Interpreter/: IO.hs  Monad.hs  State.hs
state/: before-teleport  during_computation
test/: Tests.hs
